@@ -1,5 +1,10 @@
 2012-05-01  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
+	* interp/vmlisp.lisp (COMPILE1): Move to lisp-backend.boot.
+	($lamName): Rename from *LAM-NAME*.
+
+2012-05-01  Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
 	* interp/vmlisp.lisp (REMOVE-FLUIDS): Move to lisp-backend.boot.
 	Rename to removeFluids.
 	(SIMPLE-ARGLIST): Move to lisp-backend.boot.  Rename to
